--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="En">
 <head>
-
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/recipename.html">Tortas</a>
+    <a href="recipes/tortas.html">Tortas</a>
 </body>
 
 </html>
