--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/tortas.html">Tortas</a>
+    <a href="recipes/tortas.html">Torta de Milanesa de Pollo</a>
 </body>
 
 </html>
