--- a/recipes/tortas.html
+++ b/recipes/tortas.html
@@ -1,3 +1,47 @@
 <!DOCTYPE html>
-
-<a href="../index.html">Tortas</a>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Tortas</title>
+    </head>
+    <body>
+        <div class="NavBar">
+            <a href="../index.html">Home</a>
+        </div>
+        <div class="Content">
+            <h1>Torta de Milanesa de Pollo</h1>
+            <img src="../rsc/torta.jpeg" alt=""></img>
+            <div class="Description">
+                <p> Spicy breaded chicken breast gets sandwiched between a toasted Mexican bun then topped with spicy spread, avocado, lettuce, tomato, and pickled vegetables.</p>
+            </div>
+            <div class="Ingredients">
+                <ul>
+                    <li>½ pound skinless, boneless chicken breast</li>
+                    <li>1½ tablespoons cornstarch</li>
+                    <li>1 egg</li>
+                    <li>⅓ cup bread crumbs</li>
+                    <li>2 tablespoons chopped fresh cilantro</li>
+                    <li>1 teaspoon ground chipotle pepper</li>
+                    <li>1 teaspoon dried Mexican oregano</li>
+                    <li>1 teaspoon ground cumin</li>
+                    <li>¼ teaspoon coarsely ground black pepper</li>
+                    <li>2 bolillo rolls, sliced in half lengthwise</li>
+                    <li>3 tablespoons mayonnaise</li>
+                    <li>1 tablespoon hot sauce (such as Valentina®)</li>
+                    <li>2 tablespoons sunflower seed oil</li>
+                    <li>½ avocado, sliced</li>
+                    <li>3 slices tomato</li>
+                    <li>2 lettuce leaves</li>
+                    <li>1 tablespoon pickled carrots</li>
+                    <li>1 tablespoon pickled jalapeno peppers</li>
+                </ul>
+                <div class="Steps">
+                    <ol>
+                        <li>Preheat the oven to 250 degrees F (120 degrees C).</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
