fixed missing steps

--- a/recipes/tortas.html
+++ b/recipes/tortas.html
@@ -13,7 +13,7 @@
             <h1>Torta de Milanesa de Pollo</h1>
             <img src="../rsc/torta.jpeg" alt="">
             <div class="Description">
-                <p> Spicy breaded chicken breast gets sandwiched between a toasted Mexican bun then topped with spicy spread, avocado, lettuce, tomato, and pickled vegetables.</p>
+                <p> Spicy breaded chicken breast, sandwiched between a toasted Mexican bun, topped with spicy spread, avocado, lettuce, tomato, and pickled vegetables.</p>
             </div>
             <div class="Ingredients">
                 <ul>
